higher-level messaging

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 title: "Verkout: the daily Instagram workout"
-description: "No signup. No friction. Every day, Verkout turns one Instagram post into a full workout experience -- rounds, reps, timers, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top products they endorse."
+description: "No signup. No friction. Every day, Verkout turns one Instagram post into a full workout experience --
+rounds, reps, timers, music, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top
+products they endorse."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
 
 <head>
-  <title>{{ title }}</title>  
+  <title>{{ title }}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{ page.description }}" />
   <meta name="author" content="Verkout" />
@@ -17,16 +19,16 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <meta property="og:url" content="https://www.verkout.com">
   <meta property="og:video" content="https://d3ku7zkkqjmli8.cloudfront.net/videos/verkout-tall-15sec-4.mp4">
   <meta property="og:video:width" content="540">
-  <meta property="og:video:height" content="960">  
+  <meta property="og:video:height" content="960">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{{ page.description }}">
   <meta name="twitter:image" content="{{ page.logo }}">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="apple-itunes-app" content="app-id=1505620734">
-  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />  
+  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
 
   <link rel="stylesheet" href="/assets/css/base.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css">  
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link rel="stylesheet" href="https://vjs.zencdn.net/7.8.3/video-js.min.css" />
 
@@ -71,7 +73,8 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
             <img src="/assets/images/logo-1024.png" alt="Verkout Logo">
           </a>
           <span class="secondary-color">
-            <a href="mailto:hello@verkout.com" class="nav-link secondary-color">Contact</a> <span class="secondary-color">·</span>
+            <a href="mailto:hello@verkout.com" class="nav-link secondary-color">Contact</a> <span
+              class="secondary-color">·</span>
             <a href="support.html" class="nav-link secondary-color">Support</a>
           </span>
         </div>
@@ -80,41 +83,33 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
-          <h1 class="heading primary-color">the daily Instagram workout</h1>
+          <h1 class="heading primary-color">the easiest way to stay fit after 40</h1>
           <h2 class="subheading secondary-color mt20">
-            Every day, Verkout turns one Instagram post into a full workout experience you can run in the app.<br/>Rounds, reps, timers, more.
-          <br/><br/>
-          Always a new fitness professional.<br/>
-          Always a full-body effort in 30 minutes or less.<br/>
+            Once each day, just launch the app and tap Start.
+            <br /><br />
+            No thinking. Just moving.
           </h2>
           <!---->
           <div class="mt40">
-            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
+            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank"
+              class="button mobile-text-center mt10 mobile-text-center accent-bg button__black">
               <span>Download for iOS</span>
             </a>
           </div>
         </div>
-        
+
         <div class="col-6 mobile-text-center">
           <div class="iphone">
-            <div class="mask">                
-              <!-- <img src="/assets/images/loading.png" alt="Screenshot of iPhone App" class="mask-img"> -->              
-              <video
-                id="workout_video_player"
-                class="video-js vjs-fluid vjs-big-play-button"
-                muted="muted"
-                controls
-                loop
-                poster="https://verkout.com/assets/images/loading.png"
-                data-setup='{ "loop": false, "controls": true}'
-              >
-              <source src="https://d3ku7zkkqjmli8.cloudfront.net/videos/verkout-tall-15sec-4.mp4" type="video/mp4">
+            <div class="mask">
+              <!-- <img src="/assets/images/loading.png" alt="Screenshot of iPhone App" class="mask-img"> -->
+              <video id="workout_video_player" class="video-js vjs-fluid vjs-big-play-button" muted="muted" controls
+                loop poster="https://verkout.com/assets/images/loading.png"
+                data-setup='{ "loop": false, "controls": true}'>
+                <source src="https://d3ku7zkkqjmli8.cloudfront.net/videos/verkout-tall-15sec-4.mp4" type="video/mp4">
                 <p class="vjs-no-js">
                   To view this video please enable JavaScript, and consider upgrading to a
                   web browser that
-                  <a href="https://videojs.com/html5-video-support/" target="_blank"
-                    >supports HTML5 video</a
-                  >
+                  <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                 </p>
               </video>
             </div>
@@ -126,75 +121,96 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
+          <h2 class="primary-color">THE DAILY INSTAGRAM WORKOUT</h2>
+          <h3 class="secondary-color mt20">
+            Every day, Verkout turns one Instagram post into a full workout experience you can run in the
+            app.<br />Rounds, reps, timers, music, more.
+            <br /><br />
+            Always a new fitness professional.<br />
+            Always a full-body effort in 30 minutes or less.<br />
+          </h3>
+        </div>
+      </div>
+      <div class="container-lrg flex">
+        <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
           <h2 class="primary-color">FOR BUSY ATHLETES (CURRENT AND FORMER)</h2>
           <h3 class="secondary-color mt20">
-            If you're a beginner to fitness, you should consider other apps.<br/><br/>The Daily Verkout, always doable in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate difficulty</span>...and occasionally tougher.<br/><br/>There is little hand-holding or instruction. Modify any movements as necessary.
-          </h3>          
-        </div>          
+            If you're a beginner to fitness, you might consider other apps.<br /><br />The Daily Verkout, always doable
+            in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate
+              difficulty</span>...and occasionally tougher.<br /><br />There is little hand-holding or instruction.
+            Modify any movements as necessary.
+          </h3>
+        </div>
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
           <h2 class="primary-color">FROM UNDISCOVERED OR UNDER-CELEBRATED FITNESS TALENT</h2>
           <h3 class="secondary-color mt20">
-            Every workout comes from the pages of someone new on Instagram. Always a new face, new videos, and new movements.<br/><br/>Boredom, begone. Hello, fresh inspiration!
-          </h3>    
-        </div>          
+            Every workout comes from the pages of someone new on Instagram. Always a new face, new videos, and new
+            movements.<br /><br />Boredom, begone. Hello, fresh inspiration!
+          </h3>
+        </div>
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
           <h2 class="primary-color">ONE QUICK WORKOUT EACH DAY</h2>
           <h3 class="secondary-color mt20">
             ...and nothing else.
-<br/><br/>
-<span class="bold">NO SIGNUP</span>.<br/>
-No email.<br/>
-No goal-setting.<br/>
-No credit card.<br/>
-No questions.<br/>
-<br/><br/>
-<span class="bold">No thinking.<br/>
-JUST MOVING.</span>
-          </h3>    
-        </div>          
+            <br /><br />
+            <span class="bold">NO SIGNUP</span>.<br />
+            No email.<br />
+            No goal-setting.<br />
+            No credit card.<br />
+            No questions.<br />
+            <br /><br />
+            <span class="bold">No thinking.<br />
+              JUST MOVING.</span>
+          </h3>
+        </div>
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
           <h2 class="primary-color">DOABLE ANYWHERE</h2>
           <h3 class="secondary-color mt20">
-            Every day, you'll have access to one bodyweight workout and one workout with common equipment (dumbbells, kettlebells, resistance bands, jumprope, box).<br/><br/>Roll out of bed?<br/>Hit your favorite gym?<br/><br/> Doesn't matter. Just open the app and GET GOING.
-          </h3>    
-        </div>          
-      </div>      
+            Every day, you'll have access to one bodyweight workout and one workout with common equipment (dumbbells,
+            kettlebells, resistance bands, jumprope, box).<br /><br />Roll out of bed?<br />Hit your favorite
+            gym?<br /><br /> Doesn't matter. Just open the app and GET GOING.
+          </h3>
+        </div>
+      </div>
     </section>
 
     <section class="section footer-section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical text-center mobile-text-center mb40">
           <div class="mt40">
-            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank" class="button mobile-text-center mt10 mobile-text-center accent-bg button__black"> 
+            <a href="https://apps.apple.com/us/app/verkout/id1505620734" target="_blank"
+              class="button mobile-text-center mt10 mobile-text-center accent-bg button__black">
               <span>Download for iOS</span>
             </a>
           </div>
         </div>
       </div>
       <div class="container-lrg flex">
-        <div class="flex flex-column col-12 text-center mobile-text-center mb40">          
+        <div class="flex flex-column col-12 text-center mobile-text-center mb40">
           <h2 class="primary-color bold">Have you done your Verkout today?</h2>
-          <p class="secondary-color comfy">The iOS app is built by<br/>our small team in Austin, TX.</p>
-          <p class="secondary-color"><br/>Android is up next.</p> 
+          <p class="secondary-color comfy">The iOS app is built by<br />our small team in Austin, TX.</p>
+          <p class="secondary-color"><br />Android is up next.</p>
           <div class="social">
-            <br/>
-            <a href="https://instagram.com/verkoutapp" target=_" ><img class="logoIg mediumWidth" src="/assets/images/logo-ig-white.png" /></a>
-            <a href="https://twitter.com/verkoutapp" target=_"><img class="logoTwitter mediumWidth" src="/assets/images/logo-twitter-white.png" /></a>
+            <br />
+            <a href="https://instagram.com/verkoutapp" target=_"><img class="logoIg mediumWidth"
+                src="/assets/images/logo-ig-white.png" /></a>
+            <a href="https://twitter.com/verkoutapp" target=_"><img class="logoTwitter mediumWidth"
+                src="/assets/images/logo-twitter-white.png" /></a>
           </div>
         </div>
-      </div>                
+      </div>
     </section>
-  </div>    
+  </div>
 
-  <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>    
+  <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>
   <script>
-    var options = {"loop": false, "controls": true, "muted": false, "poster": "https://verkout.com/assets/images/loading.png"};
+    var options = { "loop": false, "controls": true, "muted": false, "poster": "https://verkout.com/assets/images/loading.png" };
 
     var player = videojs('workout_video_player', options, function onPlayerReady() {
       videojs.log('Your player is ready!');
