--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
-          <h1 class="heading primary-color">the easiest way to stay fit after 40</h1>
+          <h1 class="heading primary-color">a fitness app for people over 40</h1>
           <h2 class="subheading secondary-color mt20">
             Once each day, just launch the app and tap Start.
             <br /><br />
@@ -133,9 +133,9 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR BUSY ATHLETES (CURRENT AND FORMER)</h2>
+          <h2 class="primary-color">FOR BUSY PEOPLE</h2>
           <h3 class="secondary-color mt20">
-            If you're a beginner to fitness, you might consider other apps.<br /><br />The Daily Verkout, always doable
+            If you're a total beginner to fitness, you might consider other apps.<br /><br />The Daily Verkout, always doable
             in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate
               difficulty</span>...and occasionally tougher.<br /><br />There is little hand-holding or instruction.
             Modify any movements as necessary.
