index messaging changes

--- a/index.html
+++ b/index.html
@@ -121,65 +121,51 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <section class="section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">THE DAILY INSTAGRAM WORKOUT</h2>
+          <h2 class="primary-color">It's tough to stay fit as you get older.</h2>
           <h3 class="secondary-color mt20">
-            Every day, Verkout turns one Instagram post into a full workout experience you can run in the
-            app.<br />Rounds, reps, timers, music, more.
-            <br /><br />
-            Always a new fitness professional.<br />
-            Always a full-body effort in 30 minutes or less.<br />
+            We know <span class='bold'>you're busy</span>: family, job, commitments.  
+            And, if you're like us, <span class='bold'>you get bored</span> after a while and lose momentum            
           </h3>
         </div>
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FOR BUSY PEOPLE</h2>
+          <h2 class="primary-color">Verkout makes it easy to stay consistent.</h2>
           <h3 class="secondary-color mt20">
-            If you're a total beginner to fitness, you might consider other apps.<br /><br />The Daily Verkout, always doable
-            in <span class="bold">20 to 30 minutes</span>, will be of <span class="bold">intermediate
-              difficulty</span>...and occasionally tougher.<br /><br />There is little hand-holding or instruction.
-            Modify any movements as necessary.
+            <span class="bold">one workout each day</span><br />
+            Hand-picked. Full-body. Everyone around the world does the same workout. Too challenging? Modify to suit your taste.
+          </h3>
+          <h3 class="secondary-color mt20">
+            <span class="bold">20 to 30 minutes</span><br />
+            You're busy? No problem. You can always fit the Daily Verkout into your schedule.
+          </h3>
+          <h3 class="secondary-color mt20">
+            <span class="bold">infinite variety</span><br />
+            You get bored with your regular workouts? Each day's workout is something different, always from someone new, someone undiscovered or under-celebrated on Instagram.
+          </h3>
+          <h3 class="secondary-color mt20">
+            <span class="bold">doable anywhere</span><br />
+            Every day, you'll have access to one bodyweight workout and one workout with common equipment (dumbbells,
+            kettlebells, resistance bands, jumprope, box). Roll out of bed, open the app, and GET GOING.
           </h3>
         </div>
       </div>
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">FROM UNDISCOVERED OR UNDER-CELEBRATED FITNESS TALENT</h2>
+          <h2 class="primary-color">Feel better and stronger after just one week doing the Daily Verkout.</h2>
           <h3 class="secondary-color mt20">
-            Every workout comes from the pages of someone new on Instagram. Always a new face, new videos, and new
-            movements.<br /><br />Boredom, begone. Hello, fresh inspiration!
-          </h3>
-        </div>
-      </div>
-      <div class="container-lrg flex">
-        <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">ONE QUICK WORKOUT EACH DAY</h2>
-          <h3 class="secondary-color mt20">
-            ...and nothing else.
-            <br /><br />
             <span class="bold">NO SIGNUP</span>.<br />
             No email.<br />
             No goal-setting.<br />
             No credit card.<br />
             No questions.<br />
-            <br /><br />
+            <br />
             <span class="bold">No thinking.<br />
               JUST MOVING.</span>
           </h3>
         </div>
       </div>
-      <div class="container-lrg flex">
-        <div class="flex flex-column col-12 center-vertical mobile-text-center mb40">
-          <h2 class="primary-color">DOABLE ANYWHERE</h2>
-          <h3 class="secondary-color mt20">
-            Every day, you'll have access to one bodyweight workout and one workout with common equipment (dumbbells,
-            kettlebells, resistance bands, jumprope, box).<br /><br />Roll out of bed?<br />Hit your favorite
-            gym?<br /><br /> Doesn't matter. Just open the app and GET GOING.
-          </h3>
-        </div>
-      </div>
     </section>
-
     <section class="section footer-section">
       <div class="container-lrg flex">
         <div class="flex flex-column col-12 center-vertical text-center mobile-text-center mb40">
