--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
             No goal-setting.<br />
             No credit card.<br />
             No questions.<br />
+            No cost.<br />
             <br />
             <span class="bold">No thinking.<br />
               JUST MOVING.</span>
