--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Verkout: the daily Instagram workout"
+title: "Verkout: a fitness app for people over 40"
 description: "No signup. No friction. Every day, Verkout turns one Instagram post into a full workout experience --
 rounds, reps, timers, music, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top
 products they endorse."
