--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
           <h2 class="primary-color">It's tough to stay fit as you get older.</h2>
           <h3 class="secondary-color mt20">
             We know <span class='bold'>you're busy</span>: family, job, commitments.  
-            And, if you're like us, <span class='bold'>you get bored</span> after a while and lose momentum            
+            And, if you're like us, <span class='bold'>you get bored</span> after a while and lose momentum.            
           </h3>
         </div>
       </div>
