description text update

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
           <h1 class="heading primary-color">a fitness app for people over 40</h1>
           <h2 class="subheading secondary-color mt20">
-            Once each day, just launch the app and tap Start.
+            Too busy? Unmotivated? Once each day, just launch the app and tap Start.
             <br /><br />
             No thinking. Just moving.
           </h2>
