Changed site description text.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 title: "Verkout: a fitness app for people over 40"
-description: "No signup. No friction. Every day, Verkout turns one Instagram post into a full workout experience --
-rounds, reps, timers, music, more -- to showcase a new fitness pro, their 20-to-30-minute full-body effort, and the top
-products they endorse."
+description: "Verkout is a fitness app for people over 40; it makes daily fitness approachable for those of us who are 40+, busy, easily bored, frequently unmotivated, and utterly resistant to signing up or signing in to any product. Once each day, just launch the app and tap Start. No thinking. JUST MOVING. "
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
