--- a/daily.html
+++ b/daily.html
@@ -5,7 +5,7 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>	
 	<link rel="icon" type="image/png" href="/assets/img/favicon.png">
 
-	<title>Verkout | The quick daily workout. Can you do it?</title>
+	<title>Verkout - The quick daily workout. Can you do it?</title>
 	<link rel='stylesheet' href='/global.css'>
   <link rel='stylesheet' href='/index.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
@@ -17,11 +17,11 @@
   <link rel="icon" type="image/png" href="/assets/img/favicon.png">
   <meta property="og:url" content="https://verkout.com">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Verkout | The quick daily workout. Can you do it?">
+  <meta property="og:title" content="Verkout - The quick daily workout. Can you do it?">
   <meta property="og:description" content="One full-body workout each day in 30 minutes or less. Just hit play and do your best.">
   <meta property="og:image" content="/assets/img/logo-1024.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Verkout | The quick daily workout. Can you do it?">
+  <meta name="twitter:title" content="Verkout - The quick daily workout. Can you do it?">
   <meta name="twitter:description" content="One full-body workout each day in 30 minutes or less. Just hit play and do your best.">
   <meta name="twitter:image" content="/assets/img/logo-1024.png">
 
