--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZT0TPL45R"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M29NN82');</script>
+  <!-- End Google Tag Manager -->
 
-    gtag('config', 'G-FZT0TPL45R');
-  </script>
-  
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>	
 	<link rel="icon" type="image/png" href="/assets/img/favicon.png">
@@ -38,6 +36,10 @@
 	<script defer src='/build/bundle.js'></script>  
 </head>
 
-<body class="bg-black">  
+<body class="bg-black">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M29NN82"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->  
 </body>
 </html>
