twitter card image

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
   <meta name="description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
   <meta itemprop="name" content="Verkout">
   <meta itemprop="description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
-  <meta itemprop="image" content="/assets/img/logo-1024.png">
-  <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+  <meta itemprop="image" content="https://verkout.com/assets/img/logo-1024.png">
+  <link rel="icon" type="image/png" href="https://verkout.com/assets/img/favicon.png">
   <meta property="og:url" content="https://verkout.com">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Verkout - The quick daily workout. Can you do it?">
   <meta property="og:description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
-  <meta property="og:image" content="/assets/img/logo-1024.png">
+  <meta property="og:image" content="https://verkout.com/assets/img/logo-1024.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Verkout - The quick daily workout. Can you do it?">
   <meta name="twitter:description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
-  <meta name="twitter:image" content="/assets/img/logo-1024.png">
+  <meta name="twitter:image" content="https://verkout.com/assets/img/logo-1024.png">
 
 	<script defer src='/build/bundle.js'></script>  
 </head>
