--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>	
-	<link rel="icon" type="image/png" href="/assets/img/favicon.png">
+	<link rel="icon" type="image/png" href="https://verkout.com/assets/img/favicon.png">
 
 	<title>Verkout - The quick daily workout. Can you do it?</title>
 	<link rel='stylesheet' href='/global.css'>
