--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>	
   <link rel="icon" type="image/png" href="https://verkout.com/assets/img/favicon.png?1">
 
-	<title>Verkout - The quick daily workout. Can you do it?</title>
+	<title>Verkout - The quick daily workout challenge. Can you do it?</title>
 	<link rel='stylesheet' href='/global.css'>
   <link rel='stylesheet' href='/index.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
@@ -24,11 +24,11 @@
   <meta itemprop="image" content="https://verkout.com/assets/img/logo-1024.png?1">
   <meta property="og:url" content="https://verkout.com">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Verkout - The quick daily workout. Can you do it?">
+  <meta property="og:title" content="Verkout - The quick daily workout challenge. Can you do it?">
   <meta property="og:description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
   <meta property="og:image" content="https://verkout.com/assets/img/logo-1024.png?1">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Verkout - The quick daily workout. Can you do it?">
+  <meta name="twitter:title" content="Verkout - The quick daily workout challenge. Can you do it?">
   <meta name="twitter:description" content="One full-body YouTube workout each day in 30 minutes or less. Just hit play and do your best.">
   <meta name="twitter:image" content="https://verkout.com/assets/img/logo-1024.png?1">
 
