--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
   <link rel="icon" type="image/png" href="https://verkout.com/assets/img/favicon.png?1">
 
 	<title>Verkout - The quick daily workout challenge. Can you do it?</title>
+	<script src="https://cdn.tailwindcss.com"></script>
+	<script>
+		tailwind.config = {
+			theme: {
+				extend: {
+					fontFamily: {
+						sans: ['-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'sans-serif']
+					},
+					backdropBlur: {
+						xs: '2px'
+					}
+				}
+			}
+		}
+	</script>
 	<link rel='stylesheet' href='/global.css'>
   <link rel='stylesheet' href='/index.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
@@ -35,7 +50,7 @@
 	<script defer src='/build/bundle.js'></script>  
 </head>
 
-<body class="bg-black">
+<body class="h-full overflow-hidden bg-black text-white font-sans m-0 p-0">
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M29NN82"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
