--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
   <!-- End Google Tag Manager -->
 
 	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>	
+	<meta name='viewport' content='width=device-width,initial-scale=1,viewport-fit=cover'>	
   <link rel="icon" type="image/png" href="https://verkout.com/assets/img/favicon.png?1">
+  
+  <!-- PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Verkout">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000000">
+  
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json">
 
 	<title>Verkout - The quick daily workout challenge. Can you do it?</title>
 	<script src="https://cdn.tailwindcss.com"></script>
